changed most of the px values to % values

--- a/divisions.html
+++ b/divisions.html
@@ -43,7 +43,7 @@
       
       <div class="gallery-images-area">
         <h5 class="league-champions-heading">A League Champion's</h5>
-        <div class="league-champions">
+        <div class="league-champions-area">
           <div class="league-champions">
             <div class="league-champion">
               <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
@@ -199,7 +199,7 @@
           </div>
           </div>
           <h5 class="league-champions-heading">Dojo League Champion's</h5>
-        <div class="league-champions">
+        <div class="league-champions-area">
           <div class="league-champions">
             <div class="league-champion">
               <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
@@ -355,7 +355,7 @@
             </div>
           </div>
           <h5 class="league-champions-heading">Cheese and Wine League Champion's</h5>
-        <div class="league-champions">
+        <div class="league-champions-area">
           <div class="league-champions">
             <div class="league-champion">
               <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
