--- a/team-member-page.html
+++ b/team-member-page.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    < class="layout-container">
+    <div class="layout-container">
     <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,6 +30,7 @@
         </div>
       </nav>
 
+      <div id="team-profile-area">
       <h1 class="team-profile-heading">Team Profile</h1>
       <div class="team-profile-area">
           <div class="member-profile">
@@ -47,6 +48,8 @@
           </div>
         </div>
       </div>
+    </div>
+    <div id="member-stats-area">
       <h3 class="member-stats-heading">Stats</h3>
       <div class="member-stats-area">
           <div class="member-stats">
@@ -88,6 +91,8 @@
         </div>
         </div>
       </div>
+    </div>
+      <div id="team-results-area">
        <h3 class="team-results-heading">Recent Matches</h3>
        <div class="team-results-area">
            <div class="team-result-row">
@@ -155,10 +160,11 @@
             </div>
          </div>
        </div>
+      </div>
 
       
-    <div class="footer-container">
-      <div class="footer-area">
+    <div class="footer-container" id="footer-container">
+      <div class="footer-area" id="footer-area">
         <div class="footer-socials">
           <a href="https://www.facebook.com/groups/captainsmodeleague">
             <img src="/images/socials/f_logo_RGB-Blue_58.png" class="social">
