--- a/team-page.html
+++ b/team-page.html
@@ -30,6 +30,7 @@
         </div>
       </nav>
 
+      <div id="team-profile-area">
       <h1 class="team-profile-heading">Team Profile</h1>
       <div class="team-profile-area">
           <div class="team-profile">
@@ -47,6 +48,9 @@
           </div>
         </div>
       </div>
+    </div>
+
+     <div id="team-member-area">
       <h3 class="team-member-heading">Team Members</h3>
       <div class="team-member-area">
           <div class="team-member-row">
@@ -111,6 +115,8 @@
           </a>
           </div>
        </div>
+      </div>
+      <div id="team-results-area">
        <h3 class="team-results-heading">Recent Matches</h3>
        <div class="team-results-area">
            <div class="team-result-row">
@@ -178,10 +184,10 @@
             </div>
          </div>
        </div>
-
+      </div>
       
-    <div class="footer-container">
-      <div class="footer-area">
+    <div class="footer-container" id="footer-container">
+      <div class="footer-area" id="footer-area">
         <div class="footer-socials">
           <a href="https://www.facebook.com/groups/captainsmodeleague">
             <img src="/images/socials/f_logo_RGB-Blue_58.png" class="social">
